log.txt
PS C:\fmb-timetracker> npx pm2 start ecosystem.config.cjs
node.exe : (node:2968) Warning: Failed to load the ES module: C:\fmb-timetracker\ecosystem.config.cjs. Make sure to set "type": "module" in the nearest package.json file or use the .mjs extension.
At line:1 char:1
+ & "C:\Program Files\nodejs/node.exe" "C:\Program Files\nodejs/node_mo ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: ((node:2968) War....mjs extension.:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
(Use `node --trace-warnings ...` to show where the warning was created)
[PM2][ERROR] File ecosystem.config.cjs malformated
C:\fmb-timetracker\ecosystem.config.cjs:2
export default {
^^^^^^
SyntaxError: Unexpected token 'export'
    at wrapSafe (node:internal/modules/cjs/loader:1620:18)
    at Module._compile (node:internal/modules/cjs/loader:1662:20)
    at Object..js (node:internal/modules/cjs/loader:1820:10)
    at Module.load (node:internal/modules/cjs/loader:1423:32)
    at Function._load (node:internal/modules/cjs/loader:1246:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1445:12)
    at require (node:internal/modules/helpers:135:16)
    at Common.parseConfig (C:\fmb-timetracker\node_modules\pm2\lib\Common.js:331:12)
